# taj_mahal

./: .gitignore  CMakeLists.txt  LICENSE  Performance_Test.ipynb  README.md  flake.nix  pyproject.toml
presentation/: presentation.tex
src/: taj_mahal.cpp
