[project]
name = "taj_mahal"
version = "1.0.0"
authors = [
    {name="James Craven", email="4jamesccraven@gmail.com"}
]
description = "An anomaly detection library"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools", "cmake"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
ext-modules = [{name="taj_mahal", sources=["src/taj_mahal.cpp"]}]
